fix text alignments

--- a/style.css
+++ b/style.css
@@ -918,7 +918,7 @@ main:nth-child(6) > header > p {
     /*text-align: center;*/
     margin-top: 30px;
     position: relative;
-    left: 670px;
+    left: 660px;
     width: 700px;
     font-style: italic;
 }
